fix(Design): allow ErrorMessage from input to be readable

--- a/src/components/atoms/ErrorMessage/_components.error-message.scss
+++ b/src/components/atoms/ErrorMessage/_components.error-message.scss
@@ -7,6 +7,13 @@
   padding: 10px;
 }
 
+.buv-c-error-message--solid {
+  // TODO: this class does a little bit too much
+  background: #fff;
+  border-radius: 2px 2px 0 0;
+  margin: 0;
+}
+
 .buv-c-error-message-title {
   color: $errorColor;
   font-weight: bold;
